// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prop types render with custom className 1`] = `
<DocumentFragment>
  <div
    class="yozora-code-literal yozora-code custom-code css-2nezmn"
  >
    <div
      class="css-z50n43"
    >
      <span
        class="css-9y6172"
      >
        <span
          class="css-t4q37b"
          title="close"
        />
        <span
          class="css-p28dfd"
          title="minimize"
        />
        <span
          class="css-6luv6p"
          title="maximize"
        />
      </span>
      <span
        class="css-n0hy0v"
        title=""
      />
      <span
        class="css-1f8l45h"
      >
        <button
          aria-label="Copy to clipboard"
          class="css-hpzs7n"
          data-copy-status="pending"
          type="button"
        >
          copy
        </button>
      </span>
    </div>
    <code
      class="css-wlig89"
    >
      <pre>
        <div
          class="css-96awu6 prism-code"
          style="color: rgb(212, 212, 212); max-height: calc(calc(var(--yozora_lineHeightCode, 1.6) * 1.8) + 6px); min-height: 100%;"
        >
          <div
            class="css-p9ofu1"
            style="width: 2.2em;"
          >
            <div
              class="css-12bnrwi"
            >
              <span>
                1
              </span>
            </div>
          </div>
          <div
            class="css-1kgxr2s"
          >
            <div
              class="css-1ttfemb"
            >
              <div
                class="token-line css-1shup6l"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                  let a = 1
                </span>
              </div>
            </div>
          </div>
        </div>
      </pre>
    </code>
  </div>
</DocumentFragment>
`;

exports[`snapshot embed 1`] = `
<DocumentFragment>
  <div
    class="yozora-code-embed yozora-code css-1dr7anf"
  >
    <span>
      Answer: 5
    </span>
  </div>
</DocumentFragment>
`;

exports[`snapshot literal 1`] = `
<DocumentFragment>
  <div
    class="yozora-code-literal yozora-code css-2nezmn"
  >
    <div
      class="css-z50n43"
    >
      <span
        class="css-9y6172"
      >
        <span
          class="css-t4q37b"
          title="close"
        />
        <span
          class="css-p28dfd"
          title="minimize"
        />
        <span
          class="css-6luv6p"
          title="maximize"
        />
      </span>
      <span
        class="css-n0hy0v"
        title="/home/demo/a.tsx"
      >
        /home/demo/a.tsx  | 6 lines.
      </span>
      <span
        class="css-1f8l45h"
      >
        <button
          aria-label="Copy to clipboard"
          class="css-hpzs7n"
          data-copy-status="pending"
          type="button"
        >
          copy
        </button>
      </span>
    </div>
    <code
      class="css-wlig89"
    >
      <pre>
        <div
          class="css-96awu6 prism-code language-jsx"
          style="color: rgb(212, 212, 212); max-height: 0;"
        >
          <div
            class="css-p9ofu1"
            style="width: 2.2em;"
          >
            <div
              class="css-jmpb5o"
            >
              <span>
                1
              </span>
            </div>
            <div
              class="css-jmpb5o"
            >
              <span>
                2
              </span>
            </div>
            <div
              class="css-12bnrwi"
            >
              <span>
                3
              </span>
            </div>
            <div
              class="css-jmpb5o"
            >
              <span>
                4
              </span>
            </div>
            <div
              class="css-12bnrwi"
            >
              <span>
                5
              </span>
            </div>
            <div
              class="css-12bnrwi"
            >
              <span>
                6
              </span>
            </div>
          </div>
          <div
            class="css-1kgxr2s"
          >
            <div
              class="css-1ttfemb"
            >
              <div
                class="token-line css-1enokts"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  (
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  )
                </span>
                <span
                  class="token plain"
                >
                   
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  =&gt;
                </span>
                <span
                  class="token plain"
                >
                   
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  {
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="token-line css-1enokts"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                        
                </span>
                <span
                  class="token keyword"
                  style="color: rgb(86, 156, 214);"
                >
                  const
                </span>
                <span
                  class="token plain"
                >
                   a 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  =
                </span>
                <span
                  class="token plain"
                >
                   
                </span>
                <span
                  class="token number"
                  style="color: rgb(181, 206, 168);"
                >
                  1
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  ;
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="token-line css-1shup6l"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                        
                </span>
                <span
                  class="token keyword"
                  style="color: rgb(86, 156, 214);"
                >
                  const
                </span>
                <span
                  class="token plain"
                >
                   b 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  =
                </span>
                <span
                  class="token plain"
                >
                   
                </span>
                <span
                  class="token number"
                  style="color: rgb(181, 206, 168);"
                >
                  2
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  ;
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="token-line css-1enokts"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                        
                </span>
                <span
                  class="token keyword"
                  style="color: rgb(86, 156, 214);"
                >
                  const
                </span>
                <span
                  class="token plain"
                >
                   c 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  =
                </span>
                <span
                  class="token plain"
                >
                   a 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  *
                </span>
                <span
                  class="token plain"
                >
                   a 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  +
                </span>
                <span
                  class="token plain"
                >
                   b 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  *
                </span>
                <span
                  class="token plain"
                >
                   b
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  ;
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="token-line css-1shup6l"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                        
                </span>
                <span
                  class="token keyword"
                  style="color: rgb(86, 156, 214);"
                >
                  return
                </span>
                <span
                  class="token plain"
                >
                   
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  &lt;
                </span>
                <span
                  class="token tag"
                  style="color: rgb(86, 156, 214);"
                >
                  span
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  &gt;
                </span>
                <span
                  class="token plain-text"
                >
                  Answer: 
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  {
                </span>
                <span
                  class="token plain"
                >
                  c
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  }
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag"
                  style="color: rgb(86, 156, 214);"
                >
                  span
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  &gt;
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="token-line css-1shup6l"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                      
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  }
                </span>
              </div>
            </div>
          </div>
        </div>
      </pre>
    </code>
  </div>
</DocumentFragment>
`;

exports[`snapshot live 1`] = `
<DocumentFragment>
  <div
    class="yozora-code-live yozora-code css-qhier0"
  >
    <div
      class="css-9b1rnv"
    >
      <span
        class="css-9y6172"
      >
        <span
          class="css-t4q37b"
          title="close"
        />
        <span
          class="css-p28dfd"
          title="minimize"
        />
        <span
          class="css-6luv6p"
          title="maximize"
        />
      </span>
      <span
        class="css-1wug2ih"
        title=""
      />
      <span
        class="css-1f8l45h"
      >
        <button
          aria-label="Copy to clipboard"
          class="css-hpzs7n"
          data-copy-status="pending"
          type="button"
        >
          copy
        </button>
      </span>
    </div>
    <div
      class="css-55xo3h"
    >
      <div
        class="css-1wau2uo"
      >
        <div
          class="yozora-code-editor css-uz8bu5"
          padding="10"
          style="tab-size: 2;"
        >
          <div
            class="css-6gcr58"
          >
            <div
              class="css-1tu59u4"
              style="width: 2.2em;"
            />
            <textarea
              autocapitalize="off"
              autocomplete="off"
              autocorrect="off"
              class="css-1nk6ywr"
              spellcheck="false"
              style="tab-size: 2; white-space: pre; padding: 0.5rem 0.6em 0px 12px;"
            >
              () =&gt; {
      const a = 1;
      const b = 2;
      const c = a * a + b * b;
      return &lt;span&gt;Answer: {c}&lt;/span&gt;
    }
            </textarea>
          </div>
          <pre
            aria-hidden="true"
            class="css-14t25us"
            style="tab-size: 2; white-space: pre;"
          >
            <div
              class="css-96awu6 prism-code language-jsx"
              style="color: rgb(212, 212, 212); max-height: calc(calc(var(--yozora_lineHeightCode, 1.6) * 4.8) + 6px); min-height: 100%;"
            >
              <div
                class="css-p9ofu1"
                style="width: 2.2em;"
              >
                <div
                  class="css-12bnrwi"
                >
                  <span>
                    1
                  </span>
                </div>
                <div
                  class="css-12bnrwi"
                >
                  <span>
                    2
                  </span>
                </div>
                <div
                  class="css-12bnrwi"
                >
                  <span>
                    3
                  </span>
                </div>
                <div
                  class="css-12bnrwi"
                >
                  <span>
                    4
                  </span>
                </div>
                <div
                  class="css-12bnrwi"
                >
                  <span>
                    5
                  </span>
                </div>
                <div
                  class="css-12bnrwi"
                >
                  <span>
                    6
                  </span>
                </div>
              </div>
              <div
                class="css-1kgxr2s"
              >
                <div
                  class="css-1ttfemb"
                >
                  <div
                    class="token-line css-1shup6l"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      (
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      )
                    </span>
                    <span
                      class="token plain"
                    >
                       
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      =&gt;
                    </span>
                    <span
                      class="token plain"
                    >
                       
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      {
                    </span>
                    <span
                      class="token plain"
                    />
                  </div>
                  <div
                    class="token-line css-1shup6l"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token plain"
                    >
                            
                    </span>
                    <span
                      class="token keyword"
                      style="color: rgb(86, 156, 214);"
                    >
                      const
                    </span>
                    <span
                      class="token plain"
                    >
                       a 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      =
                    </span>
                    <span
                      class="token plain"
                    >
                       
                    </span>
                    <span
                      class="token number"
                      style="color: rgb(181, 206, 168);"
                    >
                      1
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      ;
                    </span>
                    <span
                      class="token plain"
                    />
                  </div>
                  <div
                    class="token-line css-1shup6l"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token plain"
                    >
                            
                    </span>
                    <span
                      class="token keyword"
                      style="color: rgb(86, 156, 214);"
                    >
                      const
                    </span>
                    <span
                      class="token plain"
                    >
                       b 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      =
                    </span>
                    <span
                      class="token plain"
                    >
                       
                    </span>
                    <span
                      class="token number"
                      style="color: rgb(181, 206, 168);"
                    >
                      2
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      ;
                    </span>
                    <span
                      class="token plain"
                    />
                  </div>
                  <div
                    class="token-line css-1shup6l"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token plain"
                    >
                            
                    </span>
                    <span
                      class="token keyword"
                      style="color: rgb(86, 156, 214);"
                    >
                      const
                    </span>
                    <span
                      class="token plain"
                    >
                       c 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      =
                    </span>
                    <span
                      class="token plain"
                    >
                       a 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      *
                    </span>
                    <span
                      class="token plain"
                    >
                       a 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      +
                    </span>
                    <span
                      class="token plain"
                    >
                       b 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      *
                    </span>
                    <span
                      class="token plain"
                    >
                       b
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      ;
                    </span>
                    <span
                      class="token plain"
                    />
                  </div>
                  <div
                    class="token-line css-1shup6l"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token plain"
                    >
                            
                    </span>
                    <span
                      class="token keyword"
                      style="color: rgb(86, 156, 214);"
                    >
                      return
                    </span>
                    <span
                      class="token plain"
                    >
                       
                    </span>
                    <span
                      class="token tag punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      &lt;
                    </span>
                    <span
                      class="token tag"
                      style="color: rgb(86, 156, 214);"
                    >
                      span
                    </span>
                    <span
                      class="token tag punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      &gt;
                    </span>
                    <span
                      class="token plain-text"
                    >
                      Answer: 
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      {
                    </span>
                    <span
                      class="token plain"
                    >
                      c
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      }
                    </span>
                    <span
                      class="token tag punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      &lt;/
                    </span>
                    <span
                      class="token tag"
                      style="color: rgb(86, 156, 214);"
                    >
                      span
                    </span>
                    <span
                      class="token tag punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      &gt;
                    </span>
                    <span
                      class="token plain"
                    />
                  </div>
                  <div
                    class="token-line css-1shup6l"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token plain"
                    >
                          
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      }
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </pre>
        </div>
      </div>
      <div
        class="css-9l5569"
      >
        <div
          class="yozora-code-embed css-1lkb549"
        >
          <span>
            Answer: 5
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
